# wc2026-predictor

./: .checkov.yaml  .gdnsuppress  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  ps-rule.yaml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: architecture.md  observability_map.md  plan.md  queue_system.md  research.md
frontend/: .env.template  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx  test-setup.js
frontend/src/__tests__/: AccuracyView.test.jsx  BracketView.test.jsx  FixturesView.test.jsx  GroupsView.test.jsx  TeamNewsModal.test.jsx  UsageView.test.jsx
frontend/src/components/: AccuracyView.jsx  BracketView.jsx  FixturesView.jsx  GroupsView.jsx  TeamNewsModal.jsx  UsageView.jsx
functions/: local.settings.json.template  pyproject.toml  requirements.txt
functions/fn_api/: __init__.py  function.json
functions/fn_ingest/: __init__.py  function.json
functions/fn_predict/: __init__.py  function.json  scoring.py
functions/shared/: __init__.py  api_football.py  cosmos.py  football_data.py  group_derivation.py  serpa.py  telemetry.py  usage_tracker.py
functions/tests/: test_accuracy.py  test_api_football.py  test_cosmos.py  test_fn_api.py  test_fn_ingest.py  test_fn_predict.py  test_football_data.py  test_integration.py  test_logging_config.py  test_serpa.py  test_usage_tracker.py
infra/: main.bicep
pipelines/: azure-pipelines.yml
scripts/: check_docs.py  complete_task.py  cost_check.py  get_phase_tasks.py  renumber_tasks.py  seed_fixtures.py  smoke_test.py  test_pipeline_yaml.py
(+4 files in other folders)
