[project]
name = "functions"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "azure-cosmos>=4.16.1",
    "azure-functions>=1.24.0",
    "azure-storage-queue>=12.16.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
